💄 fixing misaligned icons

--- a/src/styles/_modifiers.scss
+++ b/src/styles/_modifiers.scss
@@ -34,6 +34,10 @@
     z-index: 2;
 }
 
+.is-valign-top {
+    vertical-align: top;
+}
+
 .has-position-relative{
     position: relative;
 }
